--- a/ShittyTea.csproj
+++ b/ShittyTea.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.5.5" />
+    <PackageReference Include="ByteSize" Version="2.0.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.28" />
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
